--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="first_tab">First Tab</string>
     <string name="second_tab">Second Tab</string>
+    <string name="tvDev_name">Evgeny Finkin</string>
+    <string name="tvDate">01/01/0001</string>
+    <string name="tvTime">00:00</string>
+    <string name="tvRssChannel">RssChannel</string>
 </resources>
